# hnswlib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.win  README.md  RELEASING.md  checksum.exs  mix.exs
.github/: do-build-manylinux2014.sh  release-please-config.json  script-to-build-manylinux2014.sh
.github/workflows/: build-and-publish.yml  ci.yml  create-release.yml  precompile-manylinux.yml  precompile.yml  release-please.yml  release.yml
c_src/: hnswlib_bfindex.hpp  hnswlib_helper.hpp  hnswlib_index.hpp  hnswlib_nif.cpp  hnswlib_nif_resource.cpp  hnswlib_nif_resource.h  nif_utils.cpp  nif_utils.hpp
lib/: hnsw_elixir.ex  hnswlib_bfindex.ex  hnswlib_helper.ex  hnswlib_index.ex  hnswlib_nif.ex
test/: hnsw_elixir_test.exs  hnswlib_bfindex_test.exs  hnswlib_index_test.exs
